payments and other changes

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "agriconnect",
-  "displayName": "agriconnect",
+  "displayName": "AgriConnect",
   "expo": {
     "extra": {
       "eas": {
