--- a/ios/agriconnect.xcodeproj/xcshareddata/xcschemes/agriconnect.xcscheme
+++ b/ios/agriconnect.xcodeproj/xcshareddata/xcschemes/agriconnect.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "E-Transcript.app"
+               BuildableName = "AgriConnect.app"
                BlueprintName = "agriconnect"
                ReferencedContainer = "container:agriconnect.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "E-Transcript.app"
+            BuildableName = "AgriConnect.app"
             BlueprintName = "agriconnect"
             ReferencedContainer = "container:agriconnect.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "E-Transcript.app"
+            BuildableName = "AgriConnect.app"
             BlueprintName = "agriconnect"
             ReferencedContainer = "container:agriconnect.xcodeproj">
          </BuildableReference>
