--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
+    "react-native-banner-carousel-updated": "1.2.1",
     "react-native-date-picker": "^4.2.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-eject": "^0.2.0",
